New Changes in User and Admin windows (pictures added)

--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -104,5 +104,11 @@
   <ItemGroup>
     <None Include="Resources\login-system-icon-13.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\admin-png-7.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
