Added Buttons funtionality to Product management window

--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ProductManagement.Designer.cs">
       <DependentUpon>ProductManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Products.cs" />
     <Compile Include="Search.cs">
       <SubType>Form</SubType>
     </Compile>
