--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AdminWin.Designer.cs">
       <DependentUpon>AdminWin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Customer.cs" />
     <Compile Include="CustomerManagement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,7 +77,7 @@
     <Compile Include="ProductManagement.Designer.cs">
       <DependentUpon>ProductManagement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Products.cs" />
+    <Compile Include="Classes\Products.cs" />
     <Compile Include="Search.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,8 +90,8 @@
     <Compile Include="WinBase.Designer.cs">
       <DependentUpon>WinBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataBase.cs" />
-    <Compile Include="Engine.cs" />
+    <Compile Include="Classes\DataBase.cs" />
+    <Compile Include="Classes\Engine.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,7 +106,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="UserWin.cs">
       <SubType>Form</SubType>
     </Compile>
